Implementação de calculadora com tdd

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "biblioteca do curso js com tdd",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "./node_modules/.bin/eslint src/*js",
+    "prepush": "npm run lint",
+    "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register",
+    "test:tdd": "npm run test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -20,5 +23,18 @@
   "bugs": {
     "url": "https://github.com/guibas741/js-tdd/issues"
   },
-  "homepage": "https://github.com/guibas741/js-tdd#readme"
+  "homepage": "https://github.com/guibas741/js-tdd#readme",
+  "devDependencies": {
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
+    "chai": "^4.2.0",
+    "eslint": "^6.7.1",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "husky": "^3.1.0",
+    "mocha": "^6.2.2"
+  }
 }
